objects/Approval_History__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Name__c</fullName>
        <label>Approval Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Rule_Name__c</fullName>
        <label>Approval Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>sbaa__Approval__c</referenceTo>
        <relationshipLabel>Approval Histories</relationshipLabel>
        <relationshipName>Approval_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Price__c</fullName>
        <formula>Quote__r.SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Price__c</fullName>
        <label>Min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>Quote__r.SBQQ__NetAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Approval Histories</relationshipLabel>
        <relationshipName>Approval_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regular_Price__c</fullName>
        <formula>Quote__r.SBQQ__RegularAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Date_Time__c</fullName>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SKU_Count__c</fullName>
        <label>SKU Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_List__c</fullName>
        <label>SKU List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Date_Time__c</fullName>
        <label>Submission Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval History</label>
    <nameField>
        <displayFormat>AH-{000000000}</displayFormat>
        <label>Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>